--- a/.github/workflows/testing_mujeres-rofe-front-test.yml
+++ b/.github/workflows/testing_mujeres-rofe-front-test.yml
@@ -21,23 +21,22 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./dist/mujeres-rofe-frontend
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Testing'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -51,6 +50,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'mujeres-rofe-front-test'
-          slot-name: 'Production'
+          slot-name: 'Testing'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_381C228BBA684AFE9F406E9792B46F71 }}
           package: .
