--- a/.github/workflows/testing_mujeres-rofe-front-test.yml
+++ b/.github/workflows/testing_mujeres-rofe-front-test.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Testing'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -50,6 +50,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'mujeres-rofe-front-test'
-          slot-name: 'Testing'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_381C228BBA684AFE9F406E9792B46F71 }}
           package: .
