--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "scam": "ng g m %npm_config_path%/%npm_config_name% && ng g c %npm_config_path%/%npm_config_name%/%npm_config_name% --flat --export --skip-tests"
   },
   "private": true,
   "dependencies": {
