--- a/.github/workflows/main_mujeres-rofe-front-pdn.yml
+++ b/.github/workflows/main_mujeres-rofe-front-pdn.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - mujeres-rofe-front-pdn
 on:
   push:
     branches:
-      - testing
+      - main
   workflow_dispatch:
 
 jobs:
