--- a/.github/workflows/main_mujeres-rofe-front-pdn.yml
+++ b/.github/workflows/main_mujeres-rofe-front-pdn.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - mujeres-rofe-front-test
+name: Build and deploy Node.js app to Azure Web App - mujeres-rofe-front-pdn
 
 on:
   push:
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Testing'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -49,7 +49,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'mujeres-rofe-front-test'
+          app-name: 'mujeres-rofe-front-pdn'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_381C228BBA684AFE9F406E9792B46F71 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_24400AE8F7DE4E28928CDC298C1B2D33 }}
           package: .
