--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "ngx-sub-form": "^5.3.0",
     "rxjs": "~7.4.0",
+    "tsdef": "^0.0.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
