--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "@typescript-eslint/no-unused-vars": ["off"],
+    "@typescript-eslint/no-explicit-any": ["off"],
     "max-len": [
       "error",
       {
