--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "lz-string": "^1.4.4",
     "ngx-sub-form": "^5.3.0",
     "rxjs": "~7.4.0",
     "tsdef": "^0.0.14",
@@ -29,6 +30,7 @@
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
