--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "lz-string": "^1.4.4",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ngx-sub-form": "^5.3.0",
     "rxjs": "~7.4.0",
     "tsdef": "^0.0.14",
