--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~7.4.0",
     "tsdef": "^0.0.14",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
