--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ng2-pdf-viewer": "^8.0.1",
     "ngx-sub-form": "^5.3.0",
     "rxjs": "~7.4.0",
+    "swiper": "^8.1.4",
     "tsdef": "^0.0.14",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
