--- a/.github/workflows/main_mujeres-rofe-front-pdn.yml
+++ b/.github/workflows/main_mujeres-rofe-front-pdn.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build
+      - name: npm install --force, build
         run: |
           npm install
           npm run build
